--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <style>
-        /* Global Styles */
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
@@ -23,7 +22,7 @@
         }
 
         header h1 {
-            font-size: 2.75625em; /* 5% increase from 2.625em */
+            font-size: 2.63em;
             margin: 0;
         }
 
@@ -35,7 +34,7 @@
             color: #ff66b2;
             margin: 0 15px;
             text-decoration: none;
-            font-size: 1.323em; /* 5% increase from 1.26em */
+            font-size: 1.26em;
         }
 
         .container {
@@ -49,15 +48,14 @@
         }
 
         section h2 {
-            font-size: 2.75625em; /* 5% increase from 2.625em */
+            font-size: 2.63em;
             margin-bottom: 20px;
             color: #ff66b2;
         }
 
-        /* Portfolio Grid */
         .portfolio-grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 30px;
             margin-top: 30px;
         }
@@ -81,4 +79,144 @@
         }
 
         .project-info {
-            position: a
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 1.58em;
+            text-align: center;
+        }
+
+        .portfolio-item .project-info::before {
+            content: attr(data-title);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 1.58em;
+            text-align: center;
+            z-index: 1;
+            opacity: 0;
+            transition: opacity 0.3s ease, transform 0.3s ease;
+        }
+
+        .portfolio-item:hover .project-info::before {
+            opacity: 1;
+            transform: translate(-50%, -50%) scale(1);
+        }
+
+        #about, #contact {
+            background-color: #222;
+        }
+
+        #about p, #contact p {
+            font-size: 1.16em;
+            line-height: 1.5em;
+            color: #ccc;
+        }
+
+        .contact-links a {
+            color: #ff66b2;
+            text-decoration: none;
+            margin: 0 20px;
+            font-size: 1.58em;
+        }
+
+        .contact-links a:hover {
+            color: #fff;
+        }
+
+        .email-link {
+            background-color: #ff66b2;
+            padding: 10px 30px;
+            border-radius: 30px;
+            color: white;
+            font-size: 1.16em;
+            text-decoration: none;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #333;
+            color: #aaa;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Anshul Mahajan</h1>
+    <nav>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#about">About Me</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+
+<section id="portfolio">
+    <div class="container">
+        <h2>Portfolio</h2>
+        <div class="portfolio-grid">
+            <a href="https://www.behance.net/gallery/223759049/Lava-Blaze-3-5G-Sleek-Design-Powerful-Presence" target="_blank" class="portfolio-item">
+                <img src="Lava blaze 3.gif" alt="Lava Blaze 3">
+                <div class="project-info" data-title="Lava Blaze 3"></div>
+            </a>
+            <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank" class="portfolio-item">
+                <img src="Pebble_Neo.gif" alt="Pebble Neo">
+                <div class="project-info" data-title="Pebble Neo"></div>
+            </a>
+            <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank" class="portfolio-item">
+                <img src="Lava_O3.gif" alt="Lava O3">
+                <div class="project-info" data-title="Lava O3"></div>
+            </a>
+            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank" class="portfolio-item">
+                <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
+                <div class="project-info" data-title="Lava Prowatch X"></div>
+            </a>
+            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank" class="portfolio-item">
+                <img src="ProBuds.jpg" alt="ProBuds">
+                <div class="project-info" data-title="ProBuds"></div>
+            </a>
+            <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank" class="portfolio-item">
+                <img src="Casio.png" alt="Casio">
+                <div class="project-info" data-title="Casio"></div>
+            </a>
+            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank" class="portfolio-item">
+                <img src="Vast.png" alt="Vast">
+                <div class="project-info" data-title="Vast"></div>
+            </a>
+        </div>
+    </div>
+</section>
+
+<section id="about">
+    <div class="container">
+        <h2>About Me</h2>
+        <p>I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools.</p>
+        <p>I specialize in crafting cinematic 3D product advertisements and visual storytelling. At Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.</p>
+        <p>My aim is to produce visual content that is not only beautiful but also deeply engaging.</p>
+    </div>
+</section>
+
+<section id="contact">
+    <div class="container">
+        <h2>Contact</h2>
+        <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
+        <p><a href="mailto:anshulmahajan752@gmail.com" class="email-link">Send me an Email</a></p>
+        <div class="contact-links">
+            <a href="https://www.linkedin.com/in/anshul-mahajan-/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.behance.net/anshul_mahajan" target="_blank"><i class="fab fa-behance"></i></a>
+            <a href="https://www.instagram.com/anshul_3d/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2025 Anshul Mahajan. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
