--- a/index.html
+++ b/index.html
@@ -137,6 +137,23 @@
             text-decoration: none;
         }
 
+        .resume-link {
+            background-color: transparent;
+            padding: 10px 30px;
+            border: 2px solid #ff66b2;
+            border-radius: 30px;
+            color: #ff66b2;
+            font-size: 1.16em;
+            text-decoration: none;
+            display: inline-block;
+            margin-top: 15px;
+        }
+
+        .resume-link:hover {
+            background-color: #ff66b2;
+            color: white;
+        }
+
         footer {
             text-align: center;
             padding: 20px 0;
@@ -206,6 +223,7 @@
         <h2>Contact</h2>
         <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
         <p><a href="mailto:anshulmahajan752@gmail.com" class="email-link">Send me an Email</a></p>
+        <a href="Anshul_Mahajan_Resume.pdf" class="resume-link" target="_blank">Download My Resume</a>
         <div class="contact-links">
             <a href="https://www.linkedin.com/in/anshul-mahajan-/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.behance.net/anshul_mahajan" target="_blank"><i class="fab fa-behance"></i></a>
