--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <style>
+        /* Global Styles */
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
@@ -22,7 +23,7 @@
         }
 
         header h1 {
-            font-size: 2.63em;
+            font-size: 2em;  /* Smaller header font */
             margin: 0;
         }
 
@@ -34,13 +35,13 @@
             color: #ff66b2;
             margin: 0 15px;
             text-decoration: none;
-            font-size: 1.26em;
+            font-size: 1.1em;  /* Slightly smaller nav links */
         }
 
+        /* Portfolio Section */
         .container {
-            width: 80%;
+            width: 85%;
             margin: 0 auto;
-            text-align: center;
         }
 
         section {
@@ -48,14 +49,17 @@
         }
 
         section h2 {
-            font-size: 2.63em;
+            font-size: 2.2em;  /* Slightly smaller section heading */
             margin-bottom: 20px;
             color: #ff66b2;
+            text-align: center;
+            font-weight: bold;
         }
 
+        /* Portfolio Grid */
         .portfolio-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(3, 1fr);
             gap: 30px;
             margin-top: 30px;
         }
@@ -80,39 +84,27 @@
 
         .project-info {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            bottom: 20px;
+            left: 20px;
             color: white;
-            font-size: 1.58em;
-            text-align: center;
-        }
-
-        .portfolio-item .project-info::before {
-            content: attr(data-title);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            font-size: 1.58em;
-            text-align: center;
-            z-index: 1;
+            font-size: 1.2em;  /* Smaller font size for project info */
+            text-align: left;
             opacity: 0;
-            transition: opacity 0.3s ease, transform 0.3s ease;
+            transition: opacity 0.3s ease;
         }
 
-        .portfolio-item:hover .project-info::before {
+        /* Hover Effect for Project Name */
+        .portfolio-item:hover .project-info {
             opacity: 1;
-            transform: translate(-50%, -50%) scale(1);
         }
 
+        /* About Section */
         #about, #contact {
             background-color: #222;
         }
 
         #about p, #contact p {
-            font-size: 1.16em;
+            font-size: 1em;  /* Smaller text for paragraphs */
             line-height: 1.5em;
             color: #ccc;
         }
@@ -121,7 +113,7 @@
             color: #ff66b2;
             text-decoration: none;
             margin: 0 20px;
-            font-size: 1.58em;
+            font-size: 1.3em;  /* Slightly smaller social links */
         }
 
         .contact-links a:hover {
@@ -133,27 +125,11 @@
             padding: 10px 30px;
             border-radius: 30px;
             color: white;
-            font-size: 1.16em;
+            font-size: 1.1em;  /* Slightly smaller email button font */
             text-decoration: none;
         }
 
-        .resume-link {
-            background-color: transparent;
-            padding: 10px 30px;
-            border: 2px solid #ff66b2;
-            border-radius: 30px;
-            color: #ff66b2;
-            font-size: 1.16em;
-            text-decoration: none;
-            display: inline-block;
-            margin-top: 15px;
-        }
-
-        .resume-link:hover {
-            background-color: #ff66b2;
-            color: white;
-        }
-
+        /* Footer Section */
         footer {
             text-align: center;
             padding: 20px 0;
@@ -177,34 +153,42 @@
     <div class="container">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
+
             <a href="https://www.behance.net/gallery/223759049/Lava-Blaze-3-5G-Sleek-Design-Powerful-Presence" target="_blank" class="portfolio-item">
                 <img src="Lava blaze 3.gif" alt="Lava Blaze 3">
-                <div class="project-info" data-title="Lava Blaze 3"></div>
+                <div class="project-info">Lava Blaze 3</div>
             </a>
+
             <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank" class="portfolio-item">
                 <img src="Pebble_Neo.gif" alt="Pebble Neo">
-                <div class="project-info" data-title="Pebble Neo"></div>
+                <div class="project-info">Pebble Neo</div>
             </a>
+
             <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank" class="portfolio-item">
                 <img src="Lava_O3.gif" alt="Lava O3">
-                <div class="project-info" data-title="Lava O3"></div>
+                <div class="project-info">Lava O3</div>
             </a>
+
             <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank" class="portfolio-item">
                 <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
-                <div class="project-info" data-title="Lava Prowatch X"></div>
+                <div class="project-info">Lava Prowatch X</div>
             </a>
+
             <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank" class="portfolio-item">
                 <img src="ProBuds.jpg" alt="ProBuds">
-                <div class="project-info" data-title="ProBuds"></div>
+                <div class="project-info">ProBuds</div>
             </a>
+
             <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank" class="portfolio-item">
                 <img src="Casio.png" alt="Casio">
-                <div class="project-info" data-title="Casio"></div>
+                <div class="project-info">Casio</div>
             </a>
+
             <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank" class="portfolio-item">
                 <img src="Vast.png" alt="Vast">
-                <div class="project-info" data-title="Vast"></div>
+                <div class="project-info">Vast</div>
             </a>
+
         </div>
     </div>
 </section>
@@ -223,7 +207,6 @@
         <h2>Contact</h2>
         <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
         <p><a href="mailto:anshulmahajan752@gmail.com" class="email-link">Send me an Email</a></p>
-        <a href="Anshul_Mahajan_Resume.pdf" class="resume-link" target="_blank">Download My Resume</a>
         <div class="contact-links">
             <a href="https://www.linkedin.com/in/anshul-mahajan-/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.behance.net/anshul_mahajan" target="_blank"><i class="fab fa-behance"></i></a>
