--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
 
         header h1 {
-            font-size: 2em;  /* Smaller header font */
+            font-size: 2.5em;
             margin: 0;
         }
 
@@ -35,7 +35,7 @@
             color: #ff66b2;
             margin: 0 15px;
             text-decoration: none;
-            font-size: 1.1em;  /* Slightly smaller nav links */
+            font-size: 1.1em;
         }
 
         /* Portfolio Section */
@@ -49,7 +49,7 @@
         }
 
         section h2 {
-            font-size: 2.2em;  /* Slightly smaller section heading */
+            font-size: 2.5em;
             margin-bottom: 20px;
             color: #ff66b2;
             text-align: center;
@@ -69,11 +69,7 @@
             overflow: hidden;
             position: relative;
             box-shadow: 0 4px 6px rgba(0,0,0,0.3);
-            transition: transform 0.3s ease;
-        }
-
-        .portfolio-item:hover {
-            transform: scale(1.05);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .portfolio-item img {
@@ -82,38 +78,45 @@
             object-fit: cover;
         }
 
-        .project-info {
+        .portfolio-item:hover {
+            transform: translateY(-5px) scale(1.03);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+        }
+
+        /* Text on Hover */
+        .portfolio-item .project-info {
+            display: none;
+        }
+
+        .portfolio-item:hover .project-info {
+            display: block;
             position: absolute;
             bottom: 20px;
             left: 20px;
             color: white;
-            font-size: 1.2em;  /* Smaller font size for project info */
+            font-size: 1.5em;
             text-align: left;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        /* Hover Effect for Project Name */
-        .portfolio-item:hover .project-info {
-            opacity: 1;
         }
 
         /* About Section */
         #about, #contact {
             background-color: #222;
+            text-align: center;
         }
 
         #about p, #contact p {
-            font-size: 1em;  /* Smaller text for paragraphs */
+            font-size: 1.1em;
             line-height: 1.5em;
             color: #ccc;
+            margin: 0 auto;
+            max-width: 800px; /* Max width for better readability */
         }
 
         .contact-links a {
             color: #ff66b2;
             text-decoration: none;
             margin: 0 20px;
-            font-size: 1.3em;  /* Slightly smaller social links */
+            font-size: 1.5em;
         }
 
         .contact-links a:hover {
@@ -125,7 +128,7 @@
             padding: 10px 30px;
             border-radius: 30px;
             color: white;
-            font-size: 1.1em;  /* Slightly smaller email button font */
+            font-size: 1.1em;
             text-decoration: none;
         }
 
@@ -135,6 +138,10 @@
             padding: 20px 0;
             background-color: #333;
             color: #aaa;
+        }
+
+        html {
+            scroll-behavior: smooth;
         }
     </style>
 </head>
@@ -196,16 +203,15 @@
 <section id="about">
     <div class="container">
         <h2>About Me</h2>
-        <p>I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools.</p>
-        <p>I specialize in crafting cinematic 3D product advertisements and visual storytelling. At Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.</p>
-        <p>My aim is to produce visual content that is not only beautiful but also deeply engaging.</p>
+        <p>I am a 3D Product Video Specialist and Motion Designer, crafting cinematic 3D product videos and visual stories that captivate and convert. With proficiency in Blender, Cinema 4D, Unreal Engine, and more, I specialize in high-impact, visually stunning content.</p>
+        <p>At Takila Designs, I deliver 15–45 second 3D product videos that showcase features with intricate details, driven by realistic lighting and a focus on immersion. My goal is to create engaging content that doesn’t just look good but connects with the audience.</p>
     </div>
 </section>
 
 <section id="contact">
     <div class="container">
         <h2>Contact</h2>
-        <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
+        <p>Let’s bring your product to life — reach out, and let’s create something exceptional.</p>
         <p><a href="mailto:anshulmahajan752@gmail.com" class="email-link">Send me an Email</a></p>
         <div class="contact-links">
             <a href="https://www.linkedin.com/in/anshul-mahajan-/" target="_blank"><i class="fab fa-linkedin"></i></a>
