--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             margin: 0 15px;
             text-decoration: none;
             font-size: 1.1em;
+            display: inline-block;
         }
 
         /* Section Container */
@@ -121,6 +122,7 @@
             text-decoration: none;
             margin: 0 20px;
             font-size: 1.5em;
+            display: inline-block;
         }
 
         .contact-links a:hover {
@@ -173,9 +175,9 @@
                 font-size: 1.8em;
             }
             nav a {
-                display: block;
-                margin: 10px 0;
                 font-size: 0.9em;
+                margin: 0 10px;
+                /* keep inline */
             }
             section h2 {
                 font-size: 2em;
