--- a/index.html
+++ b/index.html
@@ -139,27 +139,21 @@
     <!-- Projects Section -->
     <section id="projects">
         <div class="project">
-            <a href="https://www.behance.net/gallery/223759049/Lava-Blaze-3-5G-Sleek-Design-Powerful-Presence" target="_blank">
-                <img src="https://via.placeholder.com/320x240" alt="Lava Blaze 3">
-                <p>Lava Blaze 3</p>
-            </a>
-        </div>
-        <div class="project">
             <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">
                 <img src="https://via.placeholder.com/320x240" alt="Pebble Neo">
                 <p>Pebble Neo</p>
             </a>
         </div>
         <div class="project">
-            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">
-                <img src="https://via.placeholder.com/320x240" alt="Lava Prowatch X">
-                <p>Lava Prowatch X</p>
+            <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank">
+                <img src="https://via.placeholder.com/320x240" alt="Lava O3">
+                <p>Lava O3</p>
             </a>
         </div>
         <div class="project">
-            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">
-                <img src="https://via.placeholder.com/320x240" alt="Lava ProBuds">
-                <p>Lava ProBuds</p>
+            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">
+                <img src="https://via.placeholder.com/320x240" alt="VAST">
+                <p>VAST</p>
             </a>
         </div>
         <div class="project">
@@ -169,9 +163,15 @@
             </a>
         </div>
         <div class="project">
-            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">
-                <img src="https://via.placeholder.com/320x240" alt="VAST">
-                <p>VAST</p>
+            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">
+                <img src="https://via.placeholder.com/320x240" alt="Lava ProBuds">
+                <p>Lava ProBuds</p>
+            </a>
+        </div>
+        <div class="project">
+            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">
+                <img src="https://via.placeholder.com/320x240" alt="Lava Prowatch X">
+                <p>Lava Prowatch X</p>
             </a>
         </div>
     </section>
