--- a/index.html
+++ b/index.html
@@ -301,7 +301,10 @@
 <!-- Video Popup Section -->
 <div id="video-popup">
     <button id="close-video">X</button>
-    <iframe width="100%" height="200" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <video width="100%" height="200" controls>
+        <source src="https://github.com/anshulmahajan5/anshulmahajan5.github.io/raw/main/Main_Glory.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </div>
 
 <!-- Scroll Event to Show Video -->
