--- a/index.html
+++ b/index.html
@@ -214,24 +214,54 @@
     <div class="container">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
-            <!-- Portfolio items here -->
+            <!-- Portfolio items here with links to your Behance projects -->
             <div class="portfolio-item">
-                <img src="https://via.placeholder.com/600x400" alt="Project 1">
-                <div class="project-info">
-                    <p>Project 1</p>
-                </div>
+                <a href="https://www.behance.net/gallery/223759049/Lava-Blaze-3-5G-Sleek-Design-Powerful-Presence" target="_blank">
+                    <img src="https://via.placeholder.com/600x400" alt="Lava Blaze 3">
+                    <div class="project-info">
+                        <p>Lava Blaze 3</p>
+                    </div>
+                </a>
             </div>
             <div class="portfolio-item">
-                <img src="https://via.placeholder.com/600x400" alt="Project 2">
-                <div class="project-info">
-                    <p>Project 2</p>
-                </div>
+                <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">
+                    <img src="https://via.placeholder.com/600x400" alt="Pebble Neo">
+                    <div class="project-info">
+                        <p>Pebble Neo</p>
+                    </div>
+                </a>
             </div>
             <div class="portfolio-item">
-                <img src="https://via.placeholder.com/600x400" alt="Project 3">
-                <div class="project-info">
-                    <p>Project 3</p>
-                </div>
+                <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">
+                    <img src="https://via.placeholder.com/600x400" alt="Lava Prowatch X">
+                    <div class="project-info">
+                        <p>Lava Prowatch X</p>
+                    </div>
+                </a>
+            </div>
+            <div class="portfolio-item">
+                <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">
+                    <img src="https://via.placeholder.com/600x400" alt="Lava ProBuds">
+                    <div class="project-info">
+                        <p>Lava ProBuds</p>
+                    </div>
+                </a>
+            </div>
+            <div class="portfolio-item">
+                <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">
+                    <img src="https://via.placeholder.com/600x400" alt="Casio">
+                    <div class="project-info">
+                        <p>Casio</p>
+                    </div>
+                </a>
+            </div>
+            <div class="portfolio-item">
+                <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">
+                    <img src="https://via.placeholder.com/600x400" alt="VAST">
+                    <div class="project-info">
+                        <p>VAST</p>
+                    </div>
+                </a>
             </div>
         </div>
 
