--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Anshul Mahajan | 3D Product Specialist</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7217868140064787" crossorigin="anonymous"></script>
     <style>
         /* Global Styles */
         body {
@@ -16,7 +15,7 @@
             background-color: #1a1a1a;
             color: white;
         }
-        
+
         header {
             background-color: #333;
             padding: 20px 0;
@@ -177,7 +176,7 @@
             }
             nav a {
                 font-size: 0.9em;
-                margin: 0 10px; /* keep inline */
+                margin: 0 10px;
             }
             section h2 {
                 font-size: 2em;
@@ -204,12 +203,12 @@
             background-color: rgba(0, 0, 0, 0.8);
             padding: 10px;
             border-radius: 10px;
-            width: 300px;
+            width: 300px; /* Smaller size */
         }
 
         #video-popup iframe {
             width: 100%;
-            height: 200px;
+            height: 200px; /* Smaller size */
         }
 
         #close-video {
@@ -222,6 +221,12 @@
             border-radius: 50%;
             font-size: 1.2em;
             cursor: pointer;
+        }
+
+        /* AdSense */
+        .adsense {
+            margin: 20px 0;
+            text-align: center;
         }
     </style>
 </head>
@@ -244,7 +249,30 @@
                 <img src="Lava blaze 3.gif" alt="Lava Blaze 3">
                 <div class="project-info">Lava Blaze 3</div>
             </a>
-            <!-- Other portfolio items here -->
+            <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank" class="portfolio-item">
+                <img src="Pebble_Neo.gif" alt="Pebble Neo">
+                <div class="project-info">Pebble Neo</div>
+            </a>
+            <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank" class="portfolio-item">
+                <img src="Lava_O3.gif" alt="Lava O3">
+                <div class="project-info">Lava O3</div>
+            </a>
+            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank" class="portfolio-item">
+                <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
+                <div class="project-info">Lava Prowatch X</div>
+            </a>
+            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank" class="portfolio-item">
+                <img src="ProBuds.jpg" alt="ProBuds">
+                <div class="project-info">ProBuds</div>
+            </a>
+            <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank" class="portfolio-item">
+                <img src="Casio.png" alt="Casio">
+                <div class="project-info">Casio</div>
+            </a>
+            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank" class="portfolio-item">
+                <img src="Vast.png" alt="Vast">
+                <div class="project-info">Vast</div>
+            </a>
         </div>
     </div>
 </section>
@@ -253,49 +281,63 @@
     <div class="container">
         <h2>About Me</h2>
         <p>I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools.</p>
-        <p>I specialize in crafting cinematic 3D product advertisements and visual storytelling. At Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.</p>
-        <p>My aim is to produce visual content that is not only beautiful but also deeply engaging.</p>
+        <p>I specialize in crafting cinematic 3D product advertisements and visual storytelling. At Takila Designs, I deliver high-quality product visualizations that tell compelling stories.</p>
     </div>
 </section>
 
 <section id="contact">
     <div class="container">
         <h2>Contact</h2>
-        <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
-        <p><a href="mailto:anshulmahajan752@gmail.com" class="email-link">Send me an Email</a></p>
+        <p>Feel free to reach out to me via email or connect with me on social media!</p>
         <div class="contact-links">
+            <a href="mailto:anshulmahajan752@gmail.com">Email Me</a>
             <a href="https://www.linkedin.com/in/anshul-mahajan-/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.behance.net/anshul_mahajan" target="_blank"><i class="fab fa-behance"></i></a>
-            <a href="https://www.instagram.com/anshul_mahajan/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/anshulmahajan_3d/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
 </section>
 
 <footer>
-    <p>Copyright © 2025 Anshul Mahajan | All Rights Reserved</p>
+    <p>&copy; 2025 Anshul Mahajan. All Rights Reserved.</p>
 </footer>
-
-<!-- Google AdSense -->
-<ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-client="ca-pub-7217868140064787"
-     data-ad-slot="YOUR_AD_SLOT_NUMBER"
-     data-ad-format="auto"></ins>
-
-<script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
 <!-- Video Popup -->
 <div id="video-popup">
     <button id="close-video">X</button>
-    <iframe src="https://www.youtube.com/embed/1VAtKvnt73k" frameborder="0" allowfullscreen></iframe> <!-- Updated Video Link -->
+    <iframe src="https://www.youtube.com/embed/your_video_id?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
+<!-- AdSense Script -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7217868140064787" crossorigin="anonymous"></script>
+
+<!-- AdSense Ad Placeholder -->
+<div class="adsense">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-7217868140064787"
+         data-ad-slot="1234567890"
+         data-ad-format="auto"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </div>
 
 <script>
-    document.getElementById("close-video").onclick = function() {
-        document.getElementById("video-popup").style.display = "none";
-    };
+    // Popup video handling
+    const videoPopup = document.getElementById("video-popup");
+    const closeVideo = document.getElementById("close-video");
+
+    function openVideo() {
+        videoPopup.style.display = "block";
+    }
+
+    closeVideo.addEventListener("click", () => {
+        videoPopup.style.display = "none";
+    });
+
+    // Example to open video popup after 3 seconds
+    setTimeout(openVideo, 3000);
 </script>
 
 </body>
