--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
 <section id="contact">
     <div class="container">
         <h2>Contact</h2>
-        <p>Feel free to reach out to me via email or connect with me on social media!</p>
+        <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
+        <p><a href="mailto:anshulmahajan752@gmail.com" class="email-link">Send me an Email</a></p>
         <div class="contact-links">
-            <a href="mailto:anshulmahajan752@gmail.com">Email Me</a>
             <a href="https://www.linkedin.com/in/anshul-mahajan-/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.behance.net/anshul_mahajan" target="_blank"><i class="fab fa-behance"></i></a>
-            <a href="https://www.instagram.com/anshulmahajan_3d/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/anshul_3d/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
 </section>
