--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     </div>
 </section>
 
-<section id="contact">
+<<section id="contact">
     <div class="container">
         <h2>Contact</h2>
         <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
@@ -304,8 +304,11 @@
 
 <!-- Video Popup -->
 <div id="video-popup">
-    <button id="close-video">X</button>
-    <iframe src="https://www.youtube.com/embed/your_video_id?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <button id="close-video">&times;</button>
+    <video controls>
+        <source src="https://github.com/anshulmahajan5/anshulmahajan5.github.io/raw/main/Main_Glory.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </div>
 
 <!-- AdSense Script -->
