--- a/index.html
+++ b/index.html
@@ -302,14 +302,27 @@
     <p>&copy; 2025 Anshul Mahajan. All Rights Reserved.</p>
 </footer>
 
-<!-- Video Popup -->
+<!-- Video Popup Section -->
 <div id="video-popup">
-    <button id="close-video">&times;</button>
-    <video controls>
+    <button id="close-video">X</button>
+    <video id="video-player" width="100%" height="200" controls>
         <source src="https://github.com/anshulmahajan5/anshulmahajan5.github.io/raw/main/Main_Glory.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </div>
+
+<!-- Scroll Event to Show Video -->
+<script>
+    // Scroll event to show video popup when "About Me" is in view
+    window.addEventListener('scroll', function() {
+        const aboutSection = document.getElementById('about');
+        const videoPopup = document.getElementById('video-popup');
+        
+        const aboutRect = aboutSection.getBoundingClientRect();
+        if (aboutRect.top <= window.innerHeight && aboutRect.bottom >= 0) {
+            videoPopup.style.display = "block";
+        }
+    });
 
 <!-- AdSense Script -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7217868140064787" crossorigin="anonymous"></script>
@@ -327,20 +340,15 @@
 </div>
 
 <script>
-    // Popup video handling
-    const videoPopup = document.getElementById("video-popup");
-    const closeVideo = document.getElementById("close-video");
+     });
 
-    function openVideo() {
-        videoPopup.style.display = "block";
-    }
-
-    closeVideo.addEventListener("click", () => {
-        videoPopup.style.display = "none";
+    // Close video popup and pause the video
+    document.getElementById("close-video").addEventListener("click", function() {
+        const videoPlayer = document.getElementById("video-player");
+        videoPlayer.pause(); // Pause the video
+        videoPlayer.currentTime = 0; // Reset video to the beginning
+        document.getElementById("video-popup").style.display = "none"; // Hide the video popup
     });
-
-    // Example to open video popup after 3 seconds
-    setTimeout(openVideo, 3000);
 </script>
 
 </body>
