--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     </div>
 </section>
 
-<<section id="contact">
+<section id="contact">
     <div class="container">
         <h2>Contact</h2>
         <p>If you want to work together or have a project in mind, feel free to get in touch.</p>
