--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
 <section id="about">
     <div class="container">
         <h2>About Me</h2>
-        <p>I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools.</p>
-        <p>I specialize in crafting cinematic 3D product advertisements and visual storytelling. At Takila Designs, I deliver high-quality product visualizations that tell compelling stories.</p>
+        <p>I’m a multidisciplinary 3D Artist and Motion Designer specializing in cinematic product visuals, real-time rendering, and immersive storytelling.</p>
+        <p>With deep expertise in tools like Blender, Cinema 4D, Unreal Engine, and After Effects, I create high-impact 3D content that blends design, motion, and realism.</p>
     </div>
 </section>
 
